# harrow

./: .chizu.toml  .dockerignore  .gitignore  .gitmodules  .grakno.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  DOCKER_OPTIMIZATION.md  Dockerfile  LICENSE  README.md  TESTING.md  dev.arm64.Dockerfile  mise.toml  monoio.arm64.Dockerfile  perf.arm64.Dockerfile  prod.arm64.Dockerfile  tokio.Dockerfile  tokio.dev.arm64.Dockerfile  tokio.perf.arm64.Dockerfile  tokio.prod.arm64.Dockerfile
.github/ISSUE_TEMPLATE/: 01_error_handling_consistency.md  02_middleware_documentation.md  03_route_group_debugging.md  04_body_parsing_helpers.md  05_server_config_granularity.md  06_testing_coverage_improvements.md  README.md
.github/issues/: CONTEXT-README.md  README.md  monoio-01-observability-context.xml  monoio-01-observability.md  monoio-02-http2-context.xml  monoio-02-http2-support.md  monoio-03-buffer-pool-context.xml  monoio-03-buffer-pool.md  monoio-04-multishot-context.xml  monoio-04-multishot-ops.md  monoio-05-cancellation-context.xml  monoio-05-cancellation-safety.md  monoio-06-integration-context.xml  monoio-06-integration.md  monoio-07-benchmarks-context.xml  monoio-07-benchmarks.md  monoio-08-testing-context.xml  monoio-08-testing-infrastructure.md
docker/: monoio.arm64.Dockerfile  tokio.Dockerfile  tokio.dev.arm64.Dockerfile  tokio.perf.arm64.Dockerfile  tokio.prod.arm64.Dockerfile
docs/: article.md  auth-middleware.md  backend-support.md  benchmarking-aws.md  connection-safety.md  deployment.md  explicit-extractors.md  features.md  h1-dispatcher-design.md  h2-design.md  imlementation-verification-prompt.md  imlementation-verification-status-20260429.md  index.md  middleware-plan.md  middleware.md  observability.md  performance.md  protocol-backend-strategy.md  qwen-review.md  rate-limiting-middleware.md  request-helpers.md  roadmap.md  server-lifecycle.md  strategy-io-uring-tpc.md  strategy-io-uring.md  strategy-local-workers.md  strategy-tpc.md  verification.md  what-is-harrow.md
docs/old/: docker-performance.md  h2-abstraction-summary.md  linux-perf.md  middleware-plan.md  migration-from-axum.md  mimalloc.md  nemotron-review.md  opus-review.md  profiling-rust-on-linux.md  strategy-local-workers.md  strategy-tpc.md
docs/perf/: 2026-04-08-saturation-investigation.md
docs/prds/: harrow-http-framework.md
harrow/: Cargo.toml
harrow-bench/: Cargo.toml  implementations.toml
harrow-bench/benches/: axum_echo.rs  baseline.toml  body_limit.rs  catch_panic.rs  dispatch.rs  echo.rs  full_stack.rs  matchit_compare.rs  middleware_chain.rs  middleware_compare.rs  middleware_dispatch.rs  perf_isolation.rs  rate_limit.rs  route_groups.rs  scaling.rs  server_variants.rs  session.rs
harrow-bench/spinr/: brotli-json-10kb-c128.toml  brotli-json-10kb-c32.toml  brotli-json-1kb-c128.toml  brotli-json-1kb-c32.toml  text-128kb-c128.toml  text-1mb-c128.toml  text-256kb-c128.toml  text-512kb-c128.toml
harrow-bench/src/: lib.rs  perf_summary.rs
harrow-bench/src/harness/: mod.rs  ops.rs  runner.rs  spec.rs
harrow-bench/suites/: ec2-full.toml  http-basic.toml  rate-ladder.toml  spinr-vs-wrk3.toml
harrow-bench/vegeta/: text-128kb.targets.j2  text-1mb.targets.j2  text-256kb.targets.j2  text-512kb.targets.j2  text-c128.targets.j2
harrow-bench/wrk3/: brotli-json-1kb-c128.wrk3.toml  compression-json-1kb-c128.wrk3.toml  json-10kb-c128.wrk3.toml  json-1kb-c128.wrk3.toml  msgpack-1kb-c128.wrk3.toml  session-read-c128.wrk3.toml  text-128kb-c128.wrk3.toml  text-256kb-c128.wrk3.toml  text-c128.wrk3.toml  text-c32.wrk3.toml
harrow-codec/: Cargo.toml
harrow-codec-h1/: Cargo.toml
harrow-codec-h1/fuzz/: Cargo.toml
harrow-codec-h1/fuzz/fuzz_targets/: fuzz_chunked_decode.rs  fuzz_parse_request.rs  fuzz_payload_decoder.rs  fuzz_response_head.rs
harrow-codec-h1/src/: lib.rs
harrow-codec/fuzz/: Cargo.toml
harrow-codec/fuzz/fuzz_targets/: fuzz_chunked_decode.rs  fuzz_parse_request.rs  fuzz_payload_decoder.rs  fuzz_response_head.rs
harrow-codec/src/: lib.rs
harrow-core/: Cargo.toml
harrow-core/fuzz/: Cargo.toml
harrow-core/fuzz/fuzz_targets/: fuzz_path_matching.rs
harrow-core/src/: client.rs  dispatch.rs  handler.rs  lib.rs  middleware.rs  path.rs  problem.rs  request.rs  response.rs  route.rs  state.rs  timeout.rs  ws.rs
harrow-io/: Cargo.toml
harrow-io/src/: buf_pool.rs  lib.rs
harrow-middleware/: Cargo.toml
harrow-middleware/fuzz/: Cargo.toml
harrow-middleware/fuzz/fuzz_targets/: fuzz_accept_encoding.rs
harrow-middleware/src/: body_limit.rs  catch_panic.rs  compression.rs  cors.rs  lib.rs  o11y.rs  rate_limit.rs  request_id.rs  session.rs
harrow-o11y/src/: lib.rs  (+1 more)
harrow-serde/: Cargo.toml
harrow-serde/src/: json.rs  lib.rs  msgpack.rs
harrow-server/: Cargo.toml
harrow-server-meguri/: Cargo.toml
harrow-server-meguri/src/: codec.rs  connection.rs  h1.rs  lib.rs
harrow-server-meguri/tests/: integration.rs
harrow-server-monoio/: Cargo.toml
harrow-server-monoio/src/: buffer.rs  cancel.rs  codec.rs  connection.rs  h1.rs  h2.rs  kernel_check.rs  lib.rs  o11y.rs  protocol.rs
harrow-server-monoio/src/h1/: dispatcher.rs  mod.rs  request_body.rs  request_head.rs  response.rs
harrow-server-monoio/tests/: h2_integration.rs  integration.rs
harrow-server-tokio/: Cargo.toml
harrow-server-tokio-hyper/: Cargo.toml
harrow-server-tokio-hyper/src/: lib.rs
harrow-server-tokio/src/: connection.rs  lib.rs  server.rs
harrow-server-tokio/src/h1/: dispatcher.rs  error.rs  mod.rs  request_body.rs  request_head.rs  response.rs
harrow-server-tokio/tests/: dst.proptest-regressions  dst.rs  integration.rs
harrow-server/src/: h1.rs  lib.rs
harrow-server/tests/: integration.rs
harrow/examples/: bench_target_monoio.rs  bench_target_tokio.rs  hello.rs  hello_hyper.rs  monoio_hello.rs  vegeta_target_monoio.rs  vegeta_target_tokio.rs
harrow/examples/common/: mod.rs
harrow/src/: lib.rs
infra/: README.md  instances.tf  main.tf  outputs.tf  user-data.sh  variables.tf
ntex-compio-bench/: Cargo.toml
ntex-compio-bench/src/: main.rs
scripts/: bench-serde.sh
(+534 files in other folders)
