[workspace]
resolver = "2"
members = [
    "harrow",
    "harrow-core",
    "harrow-middleware",
    "harrow-o11y",
    "harrow-serde",
    "harrow-server",
    "harrow-bench",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/l1x/harrow"

[workspace.dependencies]
harrow-core = { path = "harrow-core", version = "0.2.0" }
harrow-o11y = { path = "harrow-o11y", version = "0.2.0" }
harrow-middleware = { path = "harrow-middleware", version = "0.2.0" }
harrow-serde = { path = "harrow-serde", version = "0.2.0" }
harrow-server = { path = "harrow-server", version = "0.2.0" }

bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tokio = { version = "1", features = ["full"] }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rolly = "0.9"
axum = "0.8"
futures-util = "0.3"
percent-encoding = "2"
matchit = "0.8"
flate2 = "1"
brotli = "7"
blake3 = "1"

[profile.bench]
debug = true
opt-level = 3
lto = "thin"

[profile.release]
debug = 1
opt-level = 3
lto = "fat"
codegen-units = 1
