[workspace]
resolver = "2"
exclude = ["harrow-core/fuzz", "harrow-codec-h1/fuzz", "harrow-middleware/fuzz"]
members = [
    "harrow",
    "harrow-core",
    "harrow-middleware",
    "harrow-o11y",
    "harrow-serde",
    "harrow-server",
    "harrow-server-tokio",
    "harrow-server-monoio",
    "harrow-codec-h1",
    "harrow-io",
    "harrow-server-meguri",
    "harrow-bench",
    "ntex-compio-bench",
    "meguri",
]

[workspace.package]
version = "0.9.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/vectorian-rs/harrow"
readme = "README.md"

[workspace.dependencies]
harrow-codec-h1 = { path = "harrow-codec-h1", version = "0.9.6" }
harrow-io = { path = "harrow-io", version = "0.9.6" }
harrow-server = { path = "harrow-server", version = "0.9.6" }
harrow-core = { path = "harrow-core", version = "0.9.6" }
harrow-o11y = { path = "harrow-o11y", version = "0.9.6" }
harrow-middleware = { path = "harrow-middleware", version = "0.9.6" }
harrow-serde = { path = "harrow-serde", version = "0.9.6" }
harrow-server-tokio = { path = "harrow-server-tokio", version = "0.9.6" }
harrow-server-monoio = { path = "harrow-server-monoio", version = "0.9.6" }
harrow-server-meguri = { path = "harrow-server-meguri", version = "0.9.6" }
meguri = { path = "meguri", version = "0.1.0" }

bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tokio = { version = "1", features = ["full"] }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rolly = "0.16"
rolly-tokio = "0.16"
rolly-monoio = "0.16"
axum = "0.8"
futures-util = "0.3"
percent-encoding = "2"
matchit = "0.8"
flate2 = "1"
brotli = "7"
blake3 = "1"
getrandom = "0.3"
mimalloc = "0.1"
dashmap = "6"
monoio = { version = "0.2", features = ["bytes"] }
httparse = "1.10"
proptest = "1"
libc = "0.2"

[profile.bench]
debug = true
opt-level = 3
lto = "thin"

[profile.release]
debug = 1
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.perf]
inherits = "release"
debug = 2

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
