[package]
name = "harrow-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmarks and load driver for Harrow"

[dependencies]
harrow = { path = "../harrow", features = ["json", "msgpack", "timeout", "request-id", "cors", "compression", "o11y"] }
harrow-core = { workspace = true, features = ["json", "msgpack"] }
harrow-o11y = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
http = { workspace = true }
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
matchit = { workspace = true }
tower-http = { version = "0.6", features = ["timeout", "request-id", "cors", "compression-gzip"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "harrow-server"
path = "src/bin/harrow_server.rs"

[[bin]]
name = "axum-server"
path = "src/bin/axum_server.rs"

[[bin]]
name = "compare-frameworks"
path = "src/bin/compare_frameworks.rs"

[[bin]]
name = "generate-histogram"
path = "src/bin/generate_histogram.rs"

[[bin]]
name = "update-baseline"
path = "src/bin/update_baseline.rs"

[[bin]]
name = "render-baseline"
path = "src/bin/render_baseline.rs"

[[bin]]
name = "measure-allocs"
path = "src/bin/measure_allocs.rs"

[[bin]]
name = "profile-concurrent"
path = "src/bin/profile_concurrent.rs"

[[bin]]
name = "serde-bench-server"
path = "src/bin/serde_bench_server.rs"

[[bin]]
name = "axum-serde-server"
path = "src/bin/axum_serde_server.rs"

[[bin]]
name = "serde-bench"
path = "src/bin/serde_bench.rs"

[[bin]]
name = "stat-bench"
path = "src/bin/stat_bench.rs"

[[bench]]
name = "echo"
harness = false

[[bench]]
name = "middleware_chain"
harness = false

[[bench]]
name = "full_stack"
harness = false

[[bench]]
name = "route_groups"
harness = false

[[bench]]
name = "axum_echo"
harness = false

[[bench]]
name = "matchit_compare"
harness = false

[[bench]]
name = "middleware_compare"
harness = false
