[package]
name = "harrow-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Benchmarks and load driver for Harrow"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
harrow = { path = "../harrow", features = ["tokio", "tokio-hyper", "monoio", "json", "msgpack", "request-id", "cors", "compression", "compression-br", "catch-panic", "o11y", "body-limit", "rate-limit", "session"] }
harrow-core = { workspace = true, features = ["json", "msgpack"] }
harrow-o11y = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
monoio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br"] }
toml = "0.8"
minijinja = "2.12"
blake3 = { workspace = true }
dashmap = { workspace = true }
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
tako-rs = "1.1"
salvo = { version = "0.90", default-features = false, features = ["server", "server-handle", "http1", "http2"] }
warp = { version = "0.4", features = ["server"] }
ntex = { version = "3", default-features = false, features = ["tokio"] }
harrow-server-meguri = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
matchit = { workspace = true }
tower-http = { version = "0.6", features = ["timeout", "request-id", "cors", "compression-gzip", "compression-br"] }
uuid = { version = "1", features = ["v4"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
futures-util = { workspace = true }

[[bin]]
name = "harrow-server-tokio"
path = "src/bin/harrow_server.rs"

[[bin]]
name = "axum-server"
path = "src/bin/axum_server.rs"

[[bin]]
name = "compare-frameworks"
path = "src/bin/compare_frameworks.rs"

[[bin]]
name = "generate-histogram"
path = "src/bin/generate_histogram.rs"

[[bin]]
name = "update-baseline"
path = "src/bin/update_baseline.rs"

[[bin]]
name = "render-baseline"
path = "src/bin/render_baseline.rs"

[[bin]]
name = "render-perf-summary"
path = "src/bin/render_perf_summary.rs"

[[bin]]
name = "measure-allocs"
path = "src/bin/measure_allocs.rs"

[[bin]]
name = "profile-concurrent"
path = "src/bin/profile_concurrent.rs"

[[bin]]
name = "profile-session"
path = "src/bin/profile_session.rs"

[[bin]]
name = "harrow-perf-server"
path = "src/bin/harrow_perf_server.rs"

[[bin]]
name = "harrow-hyper-perf-server"
path = "src/bin/harrow_hyper_perf_server.rs"

[[bin]]
name = "harrow-server-monoio"
path = "src/bin/harrow_monoio_perf_server.rs"

[[bin]]
name = "harrow-server-meguri"
path = "src/bin/harrow_meguri_perf_server.rs"

[[bin]]
name = "axum-perf-server"
path = "src/bin/axum_perf_server.rs"

[[bin]]
name = "harrow-remote-perf-test"
path = "src/bin/harrow_remote_perf_test.rs"

[[bin]]
name = "bench-single"
path = "src/bin/bench_single.rs"

[[bin]]
name = "bench-compare"
path = "src/bin/bench_compare.rs"

[[bin]]
name = "stat-bench"
path = "src/bin/stat_bench.rs"

[[bin]]
name = "tako-perf-server"
path = "src/bin/tako_perf_server.rs"

[[bin]]
name = "salvo-perf-server"
path = "src/bin/salvo_perf_server.rs"

[[bin]]
name = "warp-perf-server"
path = "src/bin/warp_perf_server.rs"

[[bin]]
name = "ntex-perf-server"
path = "src/bin/ntex_perf_server.rs"

[[bench]]
name = "echo"
harness = false

[[bench]]
name = "middleware_chain"
harness = false

[[bench]]
name = "middleware_dispatch"
harness = false

[[bench]]
name = "full_stack"
harness = false

[[bench]]
name = "route_groups"
harness = false

[[bench]]
name = "axum_echo"
harness = false

[[bench]]
name = "matchit_compare"
harness = false

[[bench]]
name = "middleware_compare"
harness = false

[[bench]]
name = "dispatch"
harness = false

[[bench]]
name = "perf_isolation"
harness = false

[[bench]]
name = "scaling"
harness = false

[[bench]]
name = "server_variants"
harness = false

[[bench]]
name = "catch_panic"
harness = false

[[bench]]
name = "body_limit"
harness = false

[[bench]]
name = "rate_limit"
harness = false

[[bench]]
name = "session"
harness = false
