[package]
name = "harrow-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "HTTP/1.1 codec for Harrow: request parsing, response serialization, chunked encoding"

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
