[package]
name = "harrow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for Harrow: routing, request/response wrappers, middleware"

[features]
default = []
json = ["dep:serde", "dep:harrow-serde", "harrow-serde/json"]
msgpack = ["dep:serde", "dep:harrow-serde", "harrow-serde/msgpack"]
profiling = []

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
pin-project-lite = { workspace = true }
matchit = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true, optional = true }
harrow-serde = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
