[package]
name = "harrow-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Feature-gated middleware collection for Harrow"

[features]
default = []
timeout = ["dep:tokio"]
request-id = []
cors = []
o11y = ["dep:tracing", "dep:rolly", "dep:harrow-o11y", "dep:blake3"]
catch-panic = ["dep:futures-util"]
body-limit = []
compression = ["dep:flate2"]
compression-br = ["compression", "dep:brotli"]
rate-limit = ["dep:dashmap", "dep:tokio"]

[dependencies]
harrow-core = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }

# Optional — pulled in by features
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
rolly = { workspace = true, optional = true }
harrow-o11y = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
flate2 = { version = "1", optional = true }
brotli = { version = "7", optional = true }
dashmap = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
rolly = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
harrow-o11y = { workspace = true }
http-body-util = { workspace = true }
futures-util = { workspace = true }
