[package]
name = "harrow-server-meguri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "io_uring server backend for Harrow using meguri"

# Linux only — io_uring is not available on other platforms.
[build-dependencies]

[target.'cfg(not(target_os = "linux"))'.build-dependencies]
# No deps on non-Linux — we just want the build script to fail

[features]
default = []
# Explicit opt-in: fires compile_error on non-Linux for a clear message.
# harrow's `meguri` feature enables this.
io-uring = ["meguri/io-uring"]
profiling = ["meguri/profiling"]

[dependencies]
harrow-codec-h1 = { workspace = true }
harrow-core = { workspace = true }
harrow-server = { workspace = true }
meguri = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body = "1"
http-body-util = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
slab = "0.4"

[dev-dependencies]
harrow-middleware = { workspace = true }
harrow-o11y = { workspace = true }
proptest = { workspace = true }
