[package]
name = "harrow-server-monoio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Experimental monoio-based HTTP/1.1 server for Harrow"

[dependencies]
harrow-core = { workspace = true }
monoio = { workspace = true }
httparse = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
libc = "0.2"
thiserror = "1"
monoio-http = "0.3.12"

[dev-dependencies]
tokio = { workspace = true }
