[package]
name = "harrow-server-monoio"
version.workspace = true
edition.workspace = true
description = "Experimental monoio-based HTTP/1.1 server for Harrow"
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bytes = { workspace = true }
futures-channel = "0.3"
futures-util = { workspace = true }
harrow-codec-h1 = { workspace = true }
harrow-core = { workspace = true }
http = { workspace = true }
http-body = "1"
http-body-util = { workspace = true }
libc = "0.2"
monoio = { workspace = true }
monoio-http = "0.3.12"
thiserror = "1"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
bolero = "0.13"
