[package]
name = "harrow-server-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Hyper server binding for Harrow: connection handling, graceful shutdown"

[features]
default = []
tls = ["hyper-rustls", "rustls"]
ws = ["harrow-core/ws", "dep:tokio-tungstenite"]
profiling = []

[dependencies]
harrow-core = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body = "1"
http-body-util = { workspace = true }
hyper = { workspace = true }
futures-util = { workspace = true }
hyper-util = { workspace = true }
pin-project-lite = { workspace = true }
tokio = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
tracing = { workspace = true }

# Optional TLS
hyper-rustls = { version = "0.27", optional = true }
rustls = { version = "0.23", optional = true }

# Optional WebSocket
tokio-tungstenite = { version = "0.29", optional = true }

[dev-dependencies]
harrow-core = { workspace = true }
harrow-middleware = { workspace = true, features = ["o11y", "body-limit", "rate-limit", "session", "catch-panic"] }
harrow-o11y = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hyper-util = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.29"
tracing-subscriber = { workspace = true }
