[package]
name = "harrow-server-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Tokio server backend for Harrow: custom HTTP codec, LocalSet per-worker, buffer pooling"

[features]
default = []
tls = ["hyper-rustls", "rustls"]
ws = ["harrow-core/ws", "dep:tokio-tungstenite", "dep:hyper", "dep:hyper-util", "dep:pin-project-lite"]
profiling = []

[dependencies]
harrow-codec-h1 = { workspace = true }
harrow-core = { workspace = true }
harrow-io = { workspace = true }
harrow-server = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body = "1"
http-body-util = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# WebSocket support pulls in hyper (needed for upgrade handshake)
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }

# Optional TLS
hyper-rustls = { version = "0.27", optional = true }
rustls = { version = "0.23", optional = true }

# Optional WebSocket
tokio-tungstenite = { version = "0.29", optional = true }

[dev-dependencies]
harrow-core = { workspace = true }
harrow-middleware = { workspace = true, features = ["o11y", "body-limit", "rate-limit", "session", "catch-panic"] }
harrow-o11y = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hyper-util = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite = "0.29"
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
