[package]
name = "harrow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A thin, macro-free HTTP framework over Hyper with opt-in observability"

[features]
default = []
json = ["harrow-core/json"]
msgpack = ["harrow-core/msgpack"]
tls = ["harrow-server/tls"]
profiling = ["harrow-core/profiling", "harrow-server/profiling"]

# Middleware features — each pulls in harrow-middleware with the right feature
timeout = ["dep:harrow-middleware", "harrow-middleware/timeout"]
request-id = ["dep:harrow-middleware", "harrow-middleware/request-id"]
cors = ["dep:harrow-middleware", "harrow-middleware/cors"]
o11y = ["dep:harrow-middleware", "harrow-middleware/o11y", "dep:harrow-o11y", "dep:rolly"]
catch-panic = ["dep:harrow-middleware", "harrow-middleware/catch-panic"]
compression = ["dep:harrow-middleware", "harrow-middleware/compression"]
body-limit = ["dep:harrow-middleware", "harrow-middleware/body-limit"]
compression-br = ["dep:harrow-middleware", "harrow-middleware/compression-br"]
rate-limit = ["dep:harrow-middleware", "harrow-middleware/rate-limit"]
session = ["dep:harrow-middleware", "harrow-middleware/session"]

[dependencies]
harrow-core = { workspace = true }
harrow-middleware = { workspace = true, optional = true }
harrow-o11y = { workspace = true, optional = true }
harrow-server = { workspace = true }
rolly = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "hello"
required-features = ["o11y", "timeout", "json"]
