[package]
name = "harrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "A thin, macro-free HTTP framework over Hyper with opt-in observability"

[features]
default = []

# Server backends (pick exactly one)
tokio = ["dep:harrow-server-tokio"]
monoio = ["dep:harrow-server-monoio"]
meguri = ["dep:harrow-server-meguri"]  # Linux only — not yet published to crates.io

# Content formats
json = ["harrow-core/json"]
msgpack = ["harrow-core/msgpack"]
openapi = ["harrow-core/openapi", "dep:bytes"]

# Server features (only apply when tokio is selected)
tls = ["harrow-server-tokio/tls"]
ws = ["harrow-server-tokio/ws"]
profiling = ["harrow-core/profiling", "harrow-server-tokio?/profiling", "harrow-server-meguri?/profiling"]

# Middleware features — each pulls in harrow-middleware with the right feature
request-id = ["dep:harrow-middleware", "harrow-middleware/request-id"]
cors = ["dep:harrow-middleware", "harrow-middleware/cors"]
o11y = ["dep:harrow-middleware", "harrow-middleware/o11y", "dep:harrow-o11y", "dep:rolly-tokio"]
catch-panic = ["dep:harrow-middleware", "harrow-middleware/catch-panic"]
compression = ["dep:harrow-middleware", "harrow-middleware/compression"]
body-limit = ["dep:harrow-middleware", "harrow-middleware/body-limit"]
compression-br = ["dep:harrow-middleware", "harrow-middleware/compression-br"]
rate-limit = ["dep:harrow-middleware", "harrow-middleware/rate-limit"]
session = ["dep:harrow-middleware", "harrow-middleware/session"]

[dependencies]
harrow-core = { workspace = true }
harrow-middleware = { workspace = true, optional = true }
harrow-o11y = { workspace = true, optional = true }
harrow-server-tokio = { workspace = true, optional = true }
harrow-server-monoio = { workspace = true, optional = true }
harrow-server-meguri = { workspace = true, optional = true }
rolly-tokio = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
monoio = { workspace = true }
http = { workspace = true }

[[example]]
name = "hello"
required-features = ["tokio", "o11y", "json"]

[[example]]
name = "monoio_hello"
required-features = ["monoio", "json"]

[[example]]
name = "bench_target_tokio"
required-features = ["tokio", "request-id", "cors", "session", "json"]

[[example]]
name = "bench_target_monoio"
required-features = ["monoio", "json"]
