[package]
name = "harrow-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
harrow-core = { path = ".." }
http = "1"
bytes = "1"
http-body-util = "0.1"

[[bin]]
name = "fuzz_query_parsing"
path = "fuzz_targets/fuzz_query_parsing.rs"
doc = false

[[bin]]
name = "fuzz_path_matching"
path = "fuzz_targets/fuzz_path_matching.rs"
doc = false
